plugins {
  id 'java'
  id 'application'
  id 'org.openjfx.javafxplugin' version '0.0.14'
}

group = 'com.booking.train'
version = '1.0-SNAPSHOT'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(22)
  }
}

repositories {
  mavenCentral()
}

ext {
  junitVersion = '5.9.2'
}

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}

javafx {
  version = "22"
  modules = [ 'javafx.controls', 'javafx.fxml' ]
}

application {
  mainClass = 'BookingTrainTicketApplication'
  run {
    doFirst {
      def javafxPath = configurations.runtimeClasspath.asPath
      jvmArgs = [
              "--module-path", javafxPath,
              "--add-modules", "javafx.controls,javafx.fxml"
      ]
    }
  }
}

tasks.named('run', JavaExec).configure {
  javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
}

dependencies {
  // Hibernate + JPA
  implementation 'org.hibernate:hibernate-core:6.0.2.Final'
  implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
  implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
  implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.2'

  // MariaDB JDBC driver
  implementation 'org.mariadb.jdbc:mariadb-java-client:3.5.1'

  // Lombok
  compileOnly 'org.projectlombok:lombok:1.18.36'
  annotationProcessor 'org.projectlombok:lombok:1.18.36'
  testCompileOnly 'org.projectlombok:lombok:1.18.36'
  testAnnotationProcessor 'org.projectlombok:lombok:1.18.36'
  // Apache PDFBox
  implementation 'org.apache.pdfbox:pdfbox:2.0.29' // Hoặc phiên bản mới nhất
  implementation 'org.apache.pdfbox:fontbox:2.0.29' // Hoặc phiên bản tương ứng

  // Data Faker
  implementation 'net.datafaker:datafaker:2.3.0'


  // JUnit 5
  testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
  testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
}

test {
  useJUnitPlatform()
}
